--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "ethereum-waffle": "^3.2.0",
     "ethers": "^5.0.19",
     "hardhat": "^2.0.2"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^3.2.0"
   }
 }
